--- a/node-server/Dockerfile
+++ b/node-server/Dockerfile
@@ -4,10 +4,11 @@ WORKDIR /app
 
 COPY package*.json ./
 
-RUN npm install
+RUN npm install \
+&&  npm install -g nodemon
 
 COPY . .
 
 EXPOSE 80
 
-CMD [ "node", "server.js" ]
+CMD [ "./start.sh" ]
