working php client

--- a/php-client/Dockerfile
+++ b/php-client/Dockerfile
@@ -1,7 +1,11 @@
-FROM php
+FROM php:7.4
 
 WORKDIR /app
 
+RUN php -r "readfile('http://getcomposer.org/installer');" | php -- --install-dir=/usr/bin/ --filename=composer
+
 COPY . .
+
+RUN composer install
 
 CMD [ "php", "./app.php" ]
