--- a/python-client/Dockerfile
+++ b/python-client/Dockerfile
@@ -2,10 +2,8 @@ FROM python:3.8
 
 WORKDIR /app
 
-COPY . /app
+COPY . .
 
 RUN pip install -r requirements.txt
 
-ENTRYPOINT [ "python" ]
-
-CMD [ "app.py" ]
+CMD [ "python", "app.py" ]
